add concept of an IR module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,7 @@ include_directories(include)
 # Specify the executable and its source files
 add_executable(slang_prototype
         src/main.c
+        include/common.h
+        include/module.h
+        src/module.c
 )
