initial working lexer version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 # Include directory for header files
 include_directories(include)
+include_directories(lexer)
 include_directories(vm)
 
 # Specify the executable and its source files
@@ -21,4 +22,8 @@ add_executable(slang_prototype
         src/value.c
         vm/vm.h
         vm/vm.c
+        include/compiler.h
+        src/compiler.c
+        lexer/lexer.c
+        lexer/lexer.h
 )
